--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Python-based CLI for encrypting large data objects using HashiCor
 authors = [{ name = "Guilherme Santos", email = "gsantos@hashicorp.com" }]
 dependencies = [
     "click>=8.1.7",
-    "cryptography<43.0.0,>=42.0.8",
+    "cryptography>=43.0.1",
     "hvac<3.0.0,>=2.3.0",
 ]
 requires-python = "<4.0,>=3.12"
