--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "python.analysis.typeCheckingMode": "standard",
   "[python]": {
+    "editor.rulers": [88],
     "editor.formatOnSave": true,
     "editor.formatOnSaveMode": "file"
   }
